fix(style.css): readability

--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,6 @@
   --fill-color-icon: #252B42; 
 }
 
-
-
 :root[theme='dark'] {
   --bg-color-body: linear-gradient( rgb(32 32 37), rgb(24 21 21), rgb(55 56 57), rgb(29 28 30));
   --bg-color-text: #ffffff;
@@ -35,7 +33,6 @@
   --border-modal: 2px solid #ffffff;
 }
 
-
 /*---------------------------------------------------------------------------*/
 /* шапка */
 .header{
@@ -53,7 +50,6 @@
   display: flex;
   gap: 10px; 
   align-items: center;
-
 
 }
 #clock {
@@ -80,10 +76,6 @@
   height: 100%; 
   width: 100%;
 }
-
-
-
-
 
 /* Основные стили для тела документа */
 body {
@@ -148,7 +140,6 @@ main {
 .column__title { 
   font-size: 25px;
   font-weight: 600;
-
 }
 
 /* Список внутри колонки */
@@ -212,7 +203,6 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 #modal__task-form,
@@ -250,13 +240,10 @@ button {
 }
 
 #modal__button-ok { 
-
   border: 2px solid var(--bg-color-body); 
   border-radius: 5px; 
   width: 90px; 
   text-transform:uppercase ;
-
-
 }
 
 #modal__button-cancel , #modal__button-confirm {
@@ -280,10 +267,10 @@ button {
 
 
 #modal__button-cancel:hover, #modal__button-confirm:hover {
-background-color: transparent;
-color: rgb(51 81 111);
-box-shadow:0 5px 11px 0 rgb(80 88 131 / 73%), 0 4px 15px 0 rgba(0,0,0,.15);
-transition: box-shadow .4s ease-out
+  background-color: transparent;
+  color: rgb(51 81 111);
+  box-shadow:0 5px 11px 0 rgb(80 88 131 / 73%), 0 4px 15px 0 rgba(0,0,0,.15);
+  transition: box-shadow .4s ease-out
 }
 
 .modal__footer {
@@ -307,9 +294,11 @@ transition: box-shadow .4s ease-out
   background-color: var(--bg-color-column-todo);
   color: var(--bg-color-text);
 }
+
 .column.column-progress{
   padding-bottom: 31px;
 }
+
 .column__task-user { 
   margin-bottom: 10px; 
   font-size: 14px;
@@ -330,7 +319,11 @@ transition: box-shadow .4s ease-out
   align-self: center; 
 }
 
-.column__button-edit , .column__button-delete , .column__button-submit, .column__button-complete, .column__button-cancel  {
+.column__button-edit , 
+.column__button-delete, 
+.column__button-submit, 
+.column__button-complete, 
+.column__button-cancel {
   fill: var(--fill-color-icon);
   stroke: #ffffff;
 }
@@ -338,9 +331,6 @@ transition: box-shadow .4s ease-out
   grid-column: 8;
 }
 
-
-
 .column__button-delete:hover { 
-
   fill: rgba(255, 0, 0, 0.637); 
 }
